--- a/templates/get-name.html
+++ b/templates/get-name.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %} <!-- retrieve layout -->
 {% block content %} <!-- lines up with the "block content" in layout.html -->
 <div class="page-content">
-{% if project %}
+{% if projects %}
+    {% for project in projects %}
     <div class="result">
         <p>ID: {{ project.get('ID') }}</p>
         <p>Name: {{ project.get('name') }}</p>
@@ -10,6 +11,7 @@
         <p>State: {{ project.get('state') }}</p>
         <p>USD pledged: {{ project.get('usd_pledged_real') }}</p>
     </div>
+    {% endfor %}
 {% else %}
     <p>Project not found</p>
 {% endif %}
