--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,8 @@
       <!-- navbar starts here -->
       <ul>
          <li><a href="/"><img src="{{url_for('static', filename='jar.png')}}" class="icon"></a></li>
-         <li><a href="/id">Search</a></li>  <!-- these are not separate pages - yet -->
+         <li><a href="/id">ID</a></li>  <!-- these are not separate pages - yet -->
+         <li><a href="/name">Name</a></li>  <!-- these are not separate pages - yet -->
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
