--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,7 @@
          <li><a href="/category">Category</a></li>  
          <li><a href="/state">State</a></li>  
          <li><a href="/month">Month</a></li> 
+         <li><a href="/search">Search</a></li> 
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
