--- a/templates/search-category.html
+++ b/templates/search-category.html
@@ -3,7 +3,7 @@
 <div class="page-content">
    <form action="" method="POST">
       <!-- p tag represents a paragraph.(seperate block of text) -->
-      <p>Search by main category:</p>
+      <p>Search by category:</p>
       <!-- input is how we get forms from users -->
       <!-- "type" how we are recieving input.("submit is a button, text is a bar") -->
       <!-- "name" the name of the text request.form looks for -->
