--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,12 +11,15 @@
       <!-- navbar starts here -->
       <ul>
          <li><a href="/"><img src="{{url_for('static', filename='jar.png')}}" class="icon"></a></li>
-         <li><a href="/id">ID</a></li>  
+        <!-- <li><a href="/id">ID</a></li>  
          <li><a href="/name">Name</a></li>  
          <li><a href="/category">Category</a></li>  
          <li><a href="/state">State</a></li>  
-         <li><a href="/month">Month</a></li> 
+         <li><a href="/month">Month</a></li> -->
          <li><a href="/search">Search</a></li> 
+         <li><a href="/update">Update</a></li> 
+         <li><a href="/delete">Delete</a></li> 
+         <li><a href="/Add">Add</a></li> 
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
