Add update functionality (w/o write-back)

--- a/templates/search-id.html
+++ b/templates/search-id.html
@@ -7,7 +7,7 @@
       <!-- input is how we get forms from users -->
       <!-- "type" how we are recieving input.("submit is a button, text is a bar") -->
       <!-- "name" the name of the text request.form looks for -->
-      <p><input type="number" name="id"></p>
+      <p><input type="number" name="ID"></p>
       <p><input type="submit" value="Submit"></p>
    </form>
 </div>
