--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,8 @@
          <li><a href="/name">Name</a></li>  
          <li><a href="/category">Category</a></li>  
          <li><a href="/state">State</a></li>  
-         <li><a href="/month">Month</a></li> 
+         <li><a href="/launched">Month</a></li> 
+         <li><a href="/edit">Edit</a></li>
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
