Update HTML is working but not pretty

--- a/templates/addKickstarter.html
+++ b/templates/addKickstarter.html
@@ -3,7 +3,7 @@
 <div class="page-content">
    <form action="" method="POST">
       <fieldset> 
-      <legend>Update Kickstarter </legend>
+      <legend>Add Kickstarter </legend>
       <!-- p tag represents a paragraph.(seperate block of text) -->
       <!-- input is how we get forms from users -->
       <!-- "type" how we are recieving input.("submit is a button, text is a bar") -->
