--- a/templates/deleteKickstarter.html
+++ b/templates/deleteKickstarter.html
@@ -9,6 +9,7 @@
       <!-- "name" the name of the text request.form looks for -->
       <p><input type="number" name="id_to_delete"></p>
       <p><input type="submit" value="Submit"></p>
+      <p>Please allow some time for the database to update after submitting!</p>
    </form>
 </div>
 {% endblock content %} <!-- indicates "block content" is done -->
