html for add completed

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
          <li><a href="/search">Search</a></li> 
          <li><a href="/update">Update</a></li> 
          <li><a href="/delete">Delete</a></li> 
-         <li><a href="/Add">Add</a></li> 
+         <li><a href="/add">Add</a></li> 
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
