Add update functionality with write-back

--- a/templates/edit-success.html
+++ b/templates/edit-success.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} <!-- retrieve layout -->
 {% block content %} <!-- lines up with the "block content" in layout.html -->
 <div class="page-content">
-    <p>Project successfully changed.</p>
+    <p>Project successfully changed</p>
 {% if project %}
     <div class="result">
         <p>ID: {{ project.get('ID') }}</p>
