finished merging all branches.

--- a/templates/addKickstarter.html
+++ b/templates/addKickstarter.html
@@ -33,6 +33,9 @@
 
       <p><input type="time" step = "1" name="time_launched"> </p>
 
+      <label>Goal</label>
+      <p><input type="number" name="goal"> </p>
+
       <label>Number Pledged</label>
       <p><input type="number" name="number_pledged"></p>
 
