--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,8 +18,10 @@
          <li><a href="/month">Month</a></li> -->
          <li><a href="/search">Search</a></li> 
          <li><a href="/edit">Edit</a></li>
-         <li><a href="/delete">Delete</a></li> 
+         <li><a href="/delete">Delete</a></li>     
          <li><a href="/add">Add</a></li> 
+         <li><a href="/update_database">Backup</a></li> 
+         <li><a href="/import_file">Import</a></li>
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
