Add input validation for edit feature

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,20 +6,52 @@
       <!-- input is how we get forms from users -->
       <!-- "type" how we are recieving input.("submit is a button, text is a bar") -->
       <!-- "name" the name of the text request.form looks for -->
-      <p>ID of project that will be edited: <input type="number" name="id_to_edit"></p>
+      <p>ID of project that will be edited: <input type="number" name="id_to_edit" min="1" oninput="validity.valid||(value='');"></p>
       <br>
-      <p>New ID: <input type="number" name="new_id"></p>
+      <p>New ID: <input type="number" name="new_id" min="1" oninput="validity.valid||(value='');"></p>
       <p>New name: <input type="text" name="new_name"></p>
       <p>New category: <input type="text" name="new_category"></p>
-      <p>New main category: <input type="text" name="new_main_category"></p>
-      <p>New currency: <input type="text" name="new_currency"></p>
+      <label for="new_main_category">New main category:</label>
+      <select name="new_main_category">
+         <option value="\n" selected disabled hidden>Choose here</option>
+         <option value="Games">Games</option>
+         <option value="Design">Design</option>
+         <option value="Technology">Technology</option>
+         <option value="Film & Video">Film & Video</option>
+         <option value="Music">Music</option>
+         <option value="Publishing">Publishing</option>
+         <option value="Fashion">Fashion</option>
+         <option value="Food">Food</option>
+         <option value="Art">Art</option>
+         <option value="Comics">Comics</option>
+         <option value="Photography">Photography</option>
+         <option value="Theater">Theater</option>
+         <option value="Crafts">Crafts</option>
+         <option value="Journalism">Journalism</option>
+         <option value="Dance">Dance</option>
+      </select>
+      <label for="new_currency">New currency:</label>
+      <select name="new_currency">
+         <option value="\n" selected disabled hidden>Choose here</option>
+         <option value="USD">USD</option>
+         <option value="GBP">GBP</option>
+         <option value="CAD">CAD</option>
+         <option value="EUR">EUR</option>
+         <option value="AUD">AUD</option>
+      </select>
       <p>New deadline: <input type="date" name="new_deadline"></p>
-      <p>New goal: <input type="number" name="new_goal"></p>
-      <!-- change to input type="datetime-local", then convert time to 24hr in flask -->
-      <p>New launched: <input type="text" name="new_launched"></p>
-      <p>New pledged: <input type="number" name="new_pledged"></p> 
-      <p>New state: <input type="text" name="new_state"></p>
-      <p>New backers: <input type="number" name="new_backers"></p>
+      <p>New goal: <input type="number" name="new_goal" min="1" oninput="validity.valid||(value='');"></p>
+      <p>New launched: <input type="datetime-local" name="new_launched" step=1></p>
+      <p>New pledged: <input type="number" name="new_pledged" min="0"></p> 
+      <label for="new_state">New state:</label>
+      <select name="new_state">
+         <option value="\n" selected disabled hidden>Choose here</option>
+         <option value="failed">Failed</option>
+         <option value="successful">Successful</option>
+         <option value="canceled">Canceled</option>
+         <option value="live">Live</option>
+      </select>
+      <p>New backers: <input type="number" name="new_backers" min="0" oninput="validity.valid||(value='');"></p>
       <p>New country: <input type="text" name="new_country"></p>
       <p><input type="submit" value="Submit"></p>
    </form>
