--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,7 @@
          <li><a href="/add">Add</a></li> 
          <li><a href="/update_database">Backup</a></li> 
          <li><a href="/import_file">Import</a></li>
+         <li><a href="/analytics">Analytics</a></li> 
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
