Delete redundant html files and fix bugs

--- a/templates/results.html
+++ b/templates/results.html
@@ -19,7 +19,7 @@
     </div>
     {% endfor %}
 {% else %}
-    <p>Project not found</p>
+    <p>{{ message }}</p>
 {% endif %}
 </div>
 {% endblock content %} <!-- indicates "block content" is done -->
