Working analytics and analytics page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
          <li><a href="/update_database">Backup</a></li> 
          <li><a href="/import_file">Import</a></li>
          <li><a href="/analytics">Analytics</a></li> 
-         <li><a href="/analytic_length">My_v_Analytics</a></li> 
+         <!--<li><a href="/analytic_length">My_v_Analytics</a></li> -->
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
