--- a/templates/analytic_options.html
+++ b/templates/analytic_options.html
@@ -9,7 +9,7 @@
       <!-- "name" the name of the text request.form looks for -->
       <p><input type="button" value = "Average Length of a Kickstarter" onclick="window.location.href = '/analytic_avg_length_ks';"></p>
       <p><input type="button" value="Category Most Likely to Fail"  onclick="window.location.href = '/analytic_likely_fail';"></p>
-      <p><input type="button" value="A3"  onclick="window.location.href = '/name';"></p>
+      <p><input type="button" value="Most Funded Category"  onclick="window.location.href = '/analytics_most_funded_category';"></p>
       <p><input type="button" value="A4" onclick="window.location.href = '/state';"></p>
       <p><input type="button" value="A5"  onclick="window.location.href = '/category';"></p>
    </form>
