Implemented Popular Month Analytic
- Implemented the analytic to display most popular month to launch a kickstarter by year.
- Also included the strict parser and ascii-only json file.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,8 @@
          <li><a href="/add">Add</a></li> 
          <li><a href="/update_database">Backup</a></li> 
          <li><a href="/import_file">Import</a></li>
-         <li><a href="/analytics">Analytics</a></li> 
+         <li><a href="/analytics">Analytics</a></li>
+         <li><a href="/analytics_popmonth">PurebreadAnalytic</a></li> <!-- My testing bit! -->
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
