--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,7 @@
          <li><a href="/import_file">Import</a></li>
          <li><a href="/analytics">Analytics</a></li>
          <li><a href="/analytics_popmonth">PurebreadAnalytic</a></li> <!-- My testing bit! -->
+         <li><a href="/analytics_popcat">AmistAnalytics</a></li>
       </ul>
       <!-- this allows the rest of website to be changed in different files -->
       {% block content %}{% endblock %}
