--- a/templates/analytic_options.html
+++ b/templates/analytic_options.html
@@ -10,7 +10,7 @@
       <p><input type="button" value = "Average Length of a Kickstarter" onclick="window.location.href = '/analytic_avg_length_ks';"></p>
       <p><input type="button" value="Category Most Likely to Fail"  onclick="window.location.href = '/analytic_likely_fail';"></p>
       <p><input type="button" value="Most Funded Category"  onclick="window.location.href = '/analytics_most_funded_category';"></p>
-      <p><input type="button" value="A4" onclick="window.location.href = '/state';"></p>
+      <p><input type="button" value="Most Popular Month to Start a Kickstarter" onclick="window.location.href = '/analytics_popmonth';"></p>
       <p><input type="button" value="A5"  onclick="window.location.href = '/category';"></p>
    </form>
 </div>
