--- a/templates/analytic_options.html
+++ b/templates/analytic_options.html
@@ -7,11 +7,11 @@
       <!-- input is how we get forms from users -->
       <!-- "type" how we are recieving input.("submit is a button, text is a bar") -->
       <!-- "name" the name of the text request.form looks for -->
-      <p><input type="button" value = "Average Length of a Kickstarter" onclick="window.location.href = '/analytic_avg_length_ks';"></p>
-      <p><input type="button" value="Category Most Likely to Fail"  onclick="window.location.href = '/analytic_likely_fail';"></p>
-      <p><input type="button" value="Most Funded Category"  onclick="window.location.href = '/analytics_most_funded_category';"></p>
-      <p><input type="button" value="Most Popular Month to Start a Kickstarter" onclick="window.location.href = '/analytics_popmonth';"></p>
-      <p><input type="button" value="Most Popular Catagory Each Month"  onclick="window.location.href = '/analytics_popcat';"></p>
+      <p><input type="button" class="button_v1_width_350" value = "Average Length of a Kickstarter" onclick="window.location.href = '/analytic_avg_length_ks';"></p>
+      <p><input type="button" class="button_v1_width_350" value="Category Most Likely to Fail"  onclick="window.location.href = '/analytic_likely_fail';"></p>
+      <p><input type="button" class="button_v1_width_350"  value="Most Funded Category"  onclick="window.location.href = '/analytics_most_funded_category';"></p>
+      <p><input type="button"  class="button_v1_width_350" value="Most Popular Month to Start a Kickstarter" onclick="window.location.href = '/analytics_popmonth';"></p>
+      <p><input type="button" class="button_v1_width_350"  value="Most Popular Catagory Each Month"  onclick="window.location.href = '/analytics_popcat';"></p>
    </form>
 </div>
 {% endblock content %} <!-- indicates "block content" is done -->
