--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(56, 56, 56);
+    background-color: rgb(59, 57, 68);
+    /*background-color: rgb(56, 56, 56);*/
     color: rgb(255, 255, 255);
     margin: 0; /* space between (outside of) border and rest of page */
     padding: 0; /* space between content and (inside of) border */
@@ -8,7 +9,8 @@ body {
 
 /* properties of navbar */
 ul {
-    background-color: rgb(205, 255, 68);
+    background-color: rgb(141, 113, 241);
+    /*background-color: rgb(205, 255, 68);*/
     list-style-type: none; /* setting for bullet points */
     margin: 0;
     padding: 0;
@@ -29,9 +31,17 @@ li a {
     text-decoration: none;
     
 }
+li a.icon {/*working on formating*/
+    color: rgb(0, 0, 0);
+    display: block;
+    text-align: center;
+    padding:5px 0px;
+    text-decoration: none;
+    
+}
 
 .icon {
-    width: 18px;
+    width: 50px;
     height: auto;
 }
 
@@ -51,3 +61,78 @@ li a:hover {
     padding: 1px 10px;
     margin: 10px 0;
 }
+.button_v1 {
+    background-color: rgb(78, 65, 151); 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.2s;
+}
+.button_v1:hover {
+    background-color: rgb(50, 40, 104); 
+}
+
+.button_v1_width_200 {/*button with set width*/
+    background-color: rgb(78, 65, 151); 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width: 200px;
+    font-size: 16px;
+    transition-duration: 0.2s;
+}
+
+.button_v1_width_200:hover {
+    background-color: rgb(50, 40, 104);  
+
+}
+
+.button_v1_width_350 {/*button with set width*/
+    background-color: rgb(78, 65, 151); 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width: 350px;
+    font-size: 16px;
+    transition-duration: 0.4s;
+}
+
+.button_v1_width_350:hover{
+    background-color: rgb(50, 40, 104);  
+}
+
+fieldset{
+    background-color: rgb(41, 37, 59);
+}
+/*
+input[type=submit] {/*changes appearance of submit buttons
+    background:rgb(99, 98, 187);
+    color:white;
+    border-style:outset;
+    border-color:rgb(14, 2, 2);
+    height:50px;
+    width:100px;
+    font:bold20px arial,sans-serif;
+    font-size: 18px;
+    text-shadow:none;
+}
+
+popblock {
+    background:rgb(71, 71, 71);
+    color: rgb(255, 255, 255);
+    padding: 1px 10px;
+    margin: 10px 0;
+    text-align: center;
+
+}
+*/
