--- a/templates/updateKickstarter.html
+++ b/templates/updateKickstarter.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} <!-- retrieve layout -->
 {% block content %} <!-- lines up with the "block content" in layout.html -->
 <div class="page-content">
-   <form action="" method="POST">
+   <form id="editsForm" action="" method="POST">
       <fieldset> 
       <legend>Update Kickstarter </legend>
       <!-- p tag represents a paragraph.(seperate block of text) -->
@@ -50,7 +50,7 @@
       <label>Amount real USD Pledged</label>
       <p><input type="number" name="amount_usd_pledged_real"></p>
 
-      <p><input type="submit" value="Submit"></p>
+      <p><input type="button"  class="button_v1" value = "Submit" onclick="document.getElementById('editsForm').submit();"> </p>
       </fieldset> 
     
    </form>
