--- a/templates/analytic_options.html
+++ b/templates/analytic_options.html
@@ -12,6 +12,7 @@
       <p><input type="button" value="Most Funded Category"  onclick="window.location.href = '/analytics_most_funded_category';"></p>
       <p><input type="button" value="Most Popular Month to Start a Kickstarter" onclick="window.location.href = '/analytics_popmonth';"></p>
       <p><input type="button" value="Most Popular Catagory Each Month"  onclick="window.location.href = '/analytics_popcat';"></p>
+      <p><input type="button" value="Most Popular Catagory Each Country"  onclick="window.location.href = '/analytics_popnation';"></p>
    </form>
 </div>
 {% endblock content %} <!-- indicates "block content" is done -->
